--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,16 +18,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Waves and particles
+email: sven.krausse97@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Currently an empty blog here. In the future I plan to share some stuff that I find interesting, mostly just stuff on coding/neuroscience/physics/...
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: SvenKrausse
+github_username:  skrausse
 
 # Build settings
 theme: minima
