--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -28,7 +28,8 @@ twitter_username: SvenKrausse
 github_username:  skrausse
 
 # Build settings
-theme: minima
+# Removed minima theme as it is now a regular theme.
+# theme: minima
 plugins:
   - jekyll-feed
 
