--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   I am easily distracted ;)
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://skrausse.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: SvenKrausse
+github_username:  skrausse
 
 # Build settings
 theme: minima
